force-app/main/default/objects/Rule_Execution_Health__c/Rule_Execution_Health__c.object-meta.xml
<CustomObject>
    <description>Tracks circuit breaker state for Behavior_Pattern_Rule__mdt rule execution. Stores consecutive failure counts and circuit state to auto-disable consistently-failing rules.</description>
    <label>Rule Execution Health</label>
    <nameField>
        <displayFormat>REH-{0000}</displayFormat>
        <label>Health Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Execution Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>