force-app/main/default/objects/Rule_Execution_Health__c/fields/Circuit_State__c.field-meta.xml
<CustomField>
    <fullName>Circuit_State__c</fullName>
    <description>Circuit breaker state: Closed (normal), Open (blocked after repeated failures), Half_Open (trial execution after cooldown).</description>
    <label>Circuit State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Half_Open</fullName>
                <label>Half Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>