force-app/main/default/objects/Rule_Execution_Health__c/fields/Consecutive_Failures__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of consecutive execution failures. Resets to 0 on success.</description>
    <label>Consecutive Failures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>