force-app/main/default/objects/Rule_Execution_Health__c/fields/Cooldown_Until__c.field-meta.xml
<CustomField>
    <fullName>Cooldown_Until__c</fullName>
    <description>DateTime after which the circuit can transition from Open to Half_Open for a trial execution.</description>
    <label>Cooldown Until</label>
    <type>DateTime</type>
</CustomField>