force-app/main/default/objects/Rule_Execution_Health__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <description>Error message from the most recent execution failure.</description>
    <label>Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>