force-app/main/default/objects/Rule_Execution_Health__c/fields/Last_Failure_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure_Time__c</fullName>
    <description>When the most recent execution failure occurred.</description>
    <label>Last Failure Time</label>
    <type>DateTime</type>
</CustomField>