force-app/main/default/objects/Rule_Execution_Health__c/fields/Last_Success_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Success_Time__c</fullName>
    <description>When the most recent successful execution occurred.</description>
    <label>Last Success Time</label>
    <type>DateTime</type>
</CustomField>