force-app/main/default/objects/Rule_Execution_Health__c/fields/Rule_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Developer_Name__c</fullName>
    <description>Maps to Behavior_Pattern_Rule__mdt.DeveloperName. Used as the unique external ID for upsert operations.</description>
    <externalId>true</externalId>
    <label>Rule Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>