force-app/main/default/objects/Rule_Execution_Health__c/fields/Total_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lifetime failure count for trending analysis.</description>
    <label>Total Failure Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>